tests/valid_inputs/char_to_bool.cpp

int main() {
	if('\0')
		return 0;
	else if('a')
		return 42;
	return -1;
}
