tests/invalid_inputs/parsing/negative_break_level.cpp

int main() {
	break -1;
}
